force-app/main/default/objects/Contract_Line_Item__c/fields/Amount_Processed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Processed__c</fullName>
    <label>Release Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>