force-app/main/default/objects/Contract_Line_Item__c/fields/Billed_Value__c.field-meta.xml
<CustomField>
    <fullName>Billed_Value__c</fullName>
    <label>Billed Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>