force-app/main/default/objects/Contract_Line_Item__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <length>50</length>
    <type>Text</type>
</CustomField>