force-app/main/default/objects/Contract_Line_Item__c/fields/isProductParent__c.field-meta.xml
<CustomField>
    <fullName>isProductParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProductParent</label>
    <type>Checkbox</type>
</CustomField>