force-app/main/default/objects/Contract_Line_Item__c/fields/Items_Processed__c.field-meta.xml
<CustomField>
    <fullName>Items_Processed__c</fullName>
    <label>Release Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>