force-app/main/default/objects/Contract_Line_Item__c/fields/Items_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Items_Remaining__c</fullName>
    <formula>Total_Quantity__c -   Items_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>