force-app/main/default/objects/Contract_Line_Item__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <label>Net Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>