force-app/main/default/objects/Contract_Line_Item__c/fields/ProductParentUnique__c.field-meta.xml
<CustomField>
    <fullName>ProductParentUnique__c</fullName>
    <label>ProductParentUnique</label>
    <length>30</length>
    <type>Text</type>
</CustomField>