force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Expected Total Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>