force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Target Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>