force-app/main/default/objects/Contract_Line_Item__c/validationRules/Release_Qty_Greater_Than_Target_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Qty_Greater_Than_Target_Qty</fullName>
    <active>true</active>
    <description>The Release Quantity cannot be greater than the Target Quantity.</description>
    <errorConditionFormula>Items_Processed__c &gt; Total_Quantity__c</errorConditionFormula>
    <errorDisplayField>Items_Processed__c</errorDisplayField>
    <errorMessage>The Release Quantity cannot be greater than the Target Quantity.</errorMessage>
</ValidationRule>